Added CSS styling

--- a/iwd-2020/music.html
+++ b/iwd-2020/music.html
@@ -6,7 +6,17 @@
 	
 	<title> Favorite Music Album
 	</title>
+<style type = "text/css">
 
+		p
+		{
+			font-family: arial;
+			font-size: 15pt;
+			font-weight: bold;
+			text-decoration: underline;
+			color: grey;
+		}
+	</style>
 </head>
 
 <h1>Michael Jackson</h1>
